[workspace]
members = ["./bindings"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
bytes = { version = "1.4", features = ["serde"] }
contracts = { path = "./bindings" }
impl-tools = "0.8.0"
itertools = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "2.3"
thiserror = "1"

[workspace.dependencies.ethers]
version = "=2.0.1"
default-features = false
features = ["abigen", "rustls"]

[package]
name = "sandwitch"
version.workspace = true
edition.workspace = true

[features]
default = ["ws", "ipc"]
ipc = ["ethers/ipc"]
ws = ["ethers/ws"]
pancake_swap = ["legacy", "contracts/pancake_toaster", "contracts/pancake_swap"]

legacy = ["ethers/legacy"]

[dependencies]
anyhow = "1"
bytes.workspace = true
clap = { version = "4.0", features = ["derive", "env"] }
contracts = { workspace = true, features = ["multicall"] }
ethers.workspace = true
eth-keystore = "0.5.0"
futures = "0.3"
itertools.workspace = true
impl-tools.workspace = true
lazy_static = "1.4"
metrics = "0.20"
metrics-exporter-prometheus = { version = "0.11", default-features = false, features = ["http-listener"] }
pin-project = "1"
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
thiserror.workspace = true
tokio = { version = "1", default-features = false, features = ["fs", "time", "rt-multi-thread"] }
tokio-stream = { version = "0.1", features = ["fs", "sync"] }
tokio-util = "0.7"
toml = "0.7.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2.2", features = ["serde"] }