[package]
name = "sandwitch-engine"
version.workspace = true
edition.workspace = true

[features]
legacy = ["sandwitch-contracts/legacy", "ethers/legacy"]

[dependencies]
sandwitch-contracts = { workspace = true, features = ["multicall"] }

anyhow.workspace = true
bytes.workspace = true
ethers.workspace = true
fixed-vec-deque = "0.1"
futures.workspace = true
itertools.workspace = true
impl-tools.workspace = true
metrics.workspace = true
nalgebra = "0.32"
pin-project.workspace = true
serde.workspace = true
serde_with.workspace = true
smartcore = "0.3"
tokio = { workspace = true, features = ["time"] }
tokio-util.workspace = true
tracing.workspace = true
thiserror.workspace = true