[package]
name = "contracts"
version.workspace = true
edition.workspace = true

[dependencies]
ethers = { workspace = true, features = ["abigen"] }

[build-dependencies]
ethers = { workspace = true, features = ["abigen", "ethers-solc"] }
lazy_static = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.5"

[features]
pancake_swap = []
pancake_toaster = []
uniswap_v2_core = []
