[package]
name = "contracts"
version.workspace = true
edition.workspace = true

[dependencies]
bitmaps = { workspace = true }
bytes = { workspace = true }
ethers = { workspace = true, features = ["abigen"] }
impl-tools = { workspace = true }
itertools = { workspace = true }

[build-dependencies]
ethers = { workspace = true, features = ["abigen", "ethers-solc"] }
lazy_static = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.5"

[features]
default = ["multicall"]

multicall = []
pancake_swap = []
pancake_toaster = []
uniswap_v2_core = []
