[package]
name = "sandwitch-monitor-erc20"
version.workspace = true
edition.workspace = true

[dependencies]
sandwitch-engine.workspace = true

async-trait.workspace = true
anyhow.workspace = true
ethers = { workspace = true, features = ["legacy"] }
futures.workspace = true
hex-literal.workspace = true
lazy_static.workspace = true
tracing.workspace = true

[dependencies.sandwitch-contracts]
workspace = true
features = [
    "pancake_swap",
    "pancake_toaster",
    "erc20",
]